--- a/default.css
+++ b/default.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font: 1rem / 1.4 sans-serif;
-  margin: 1.25rem;
+  margin: 1.5em;
 }
 
 div {
@@ -12,7 +12,7 @@ div {
 }
 
 div:not(:last-child) {
-  margin-bottom: 1.25rem;
+  margin: 0 0 1.5em 0;
 }
 
 div::after {
